trying to fix a bug (join button on Safari)

--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ h3 {font-size: 24px;
                   top: 0%;
                   z-index: -1;}
 
-.access {height: 150px;}
+.access {height: 150px; width: 80%;}
 
 .features__par {color: #7f7f7f;}
 
